# DOCOMO-OAM-6G-Compliance-for-sub-thz-Communication

./: .coveragerc  .gitignore  COMPLETE_COMMAND_GUIDE.md  FINAL_FIX_SUMMARY.md  __init__.py  docomo-6g-agent-tuning.db  pytest.ini  realistic_fixes_summary.md
IEEE_images/: __init__.py  generate_figure1_system_model.py  generate_figure1_system_model_enhanced.py
analysis/: README.md  analyze_three_way_relationship.py  analyze_throughput_handover_tradeoff.py
config/: README.md  base_config_new.yaml  config.yaml  distance_optimization_config.yaml  extended_config_new.yaml  hybrid_6g_100gbps_config.yaml  hybrid_6g_config.yaml  lab_simulation.yaml  lab_thz_only.yaml  outdoor_focused.yaml  requirements.txt  rl_config_new.yaml  simulation_params.yaml  stable_reward_config_new.yaml  stable_reward_params.yaml  sub_thz_220_high_bw.yaml  sub_thz_300_high_bw.yaml  temp_trial_0.yaml
docs/: API_DOCUMENTATION.md  COMMAND_REFERENCE.md  COMPLETE_COMMAND_GUIDE.md  CONFIGURATION_MIGRATION_GUIDE.md  DEEP_ANALYSIS_REMAINING_FILES.md  DISTANCE_OPTIMIZATION_GUIDE.md  FILE_ORGANIZATION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  LAB_TECHNICAL_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  TESTING.md
environment/: __init__.py  advanced_oam_physics.py  advanced_physics.py  distance_optimized_env.py  distance_optimizer.py  docomo_6g_env.py  docomo_atmospheric_models.py  docomo_compliance.py  docomo_kpi_tracker.py  enhanced_sensing.py  (+10 more)
project_config/: README.md  conftest.py  pyproject.toml  pytest.ini  run_tests.sh  run_tests_with_coverage.sh  setup.cfg  setup.py
(+518 files in other folders)
