[build-system]
requires = ["setuptools==69.0.3", "wheel==0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oam_6g"
version = "1.0.0"
description = "OAM 6G - Orbital Angular Momentum Reinforcement Learning Environment"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OAM 6G Team"}
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.isort]
profile = "black"
line_length = 88